# cotor

./: .gitignore  Cargo.toml
cotor_client/: Cargo.toml
cotor_core/: Cargo.toml
cotor_core/src/: lib.rs  prelude.rs
cotor_core/src/network/: mod.rs
cotor_core/src/network/crypt/: aes.rs  mod.rs  packet.rs  rsa.rs
cotor_core/src/network/packet/: aes.rs  cotor.rs  encryption.rs  filetransfer.rs  keylog.rs  listdir.rs  message.rs  mod.rs  rsa.rs  screenshot.rs  shell.rs  system.rs  types.rs
cotor_server/: Cargo.toml
cotor_server/src/: clientconn.rs  main.rs  server.rs
cotor_server/src/handlers/: filetransfer.rs  mod.rs  screenshot.rs
