[workspace]
resolver = "3"
members = [
    "cotor_server",
    "cotor_client",
    "cotor_core",
]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4","serde"] }
futures-util = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }