[package]
name = "cotor_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
typetag = "0.2.20"
bincode = {version = "2.0.1", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4","serde"] }
rsa = { version="0.10.0-rc.1",features = ["serde"] }
rand = "0.9.1"
aes-gcm = { version="0.11.0-rc.0" }
aead = "0.6.0-rc.1"