[package]
name = "cotor_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
image = "0.25.6"
chrono = "0.4.41"
tempfile = "3.20.0"
async-compression = { version="0.4.25",features=["tokio","gzip"] }
tokio-tar = "0.3.1"
cotor_core = { path = "../cotor_core" }
arti-client = { version = "0.31.0", features = ["tokio","onion-service-service","static-sqlite"] }
tor-hsservice = "0.31.0"
tor-rtcompat = { version="0.31.0",features = ["tokio"] }
tor-cell = {version = "0.31.0"}
